gen-tui/src/testing/snapshots/gen_tui__testing__layout_tests__target_gaps_diamond_x_1_y_2.snap
---
source: gen-tui/src/testing/layout_tests.rs
expression: snapshot
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"          █████                                                                 "
"        ╭─█N1██─╮                                                               "
"        │ █████ │                                                               "
"  █████ │       │ █████                                                         "
"  █N0██─┤       ├─█N3██                                                         "
"  █████ │ █████ │ █████                                                         "
"        ╰─█N2██─╯                                                               "
"          █████                                                                 "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
