gen-tui/src/testing/snapshots/gen_tui__testing__layout_tests__target_gaps_partial_loopback_x_4_y_0.snap
---
source: gen-tui/src/testing/layout_tests.rs
expression: snapshot
---
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"  █████    █████    █████    █████    █████                                                                                         "
"  █N0██─┬──█N1██────█N2██────█N3██─┬──█N4██                                                                                         "
"  █████ │  █████    █████    █████ │  █████                                                                                         "
"      ╭─╯                          ╰─╮                                                                                              "
"      ╰─◀────────────◀───────────◀───╯                                                                                              "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
