gen-tui/src/testing/snapshots/gen_tui__testing__layout_tests__variable_detail_chain_full.snap
---
source: gen-tui/src/testing/layout_tests.rs
expression: full_snapshot
---
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                  00000─111111111111111111111111111111111111111111111111111111111111"
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
"                                                                                                                                    "
